js/js.translator/testData/incremental/invalidation/typeScriptExportsPerModule/lib2/l2.6.kt
@JsExport
class MyClass(val stepId: Int) {
    @JsName("bar")
    fun qux() = foo() + stepId
}

